--- a/home_page/style.css
+++ b/home_page/style.css
@@ -26,7 +26,7 @@ h1{
 .text_content{
 	margin: 50px 100px 0px 85px;
 	display: flex;
-	
+	flex: 0 1 600px;
 	flex-direction: column;
 }
 
@@ -34,16 +34,65 @@ h1{
 	margin: 50px 0px 30px 0px;
 }
 
-.img_content{
-	min-width: 50%;
-	/*height: 735px;*/
-	
+/* 	-----------	image slider ----------- */
+#slider{
+	position: relative;
+	width: 1100px;
+	height: 735px;
+	overflow: hidden;
 }
 
-.img_content img{
-	width: 100%;
-	display: block;
+#slider ul {
+  position: relative;
+  list-style: none;
+  height: 100%;
+  width: 10000%;
+  padding: 0;
+  margin: 0;
+  transition: all 750ms ease;
+  left: 20;
 }
+
+#slider ul li {
+  position: relative;
+  height: 100%;
+  float: left;
+}
+
+#slider ul li img{
+  max-width: 1100px;
+  max-height: 735px;
+}
+
+#slider #prev, #slider #next {
+  position: absolute;
+  top: 450px;
+  right: 0;
+  width: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 2rem;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  transform: translateY(-50%);
+  transition: all 150ms ease;
+}
+
+#slider #prev:hover, #slider #next:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  text-shadow: 0;
+}
+#slider #prev {
+  left: 10px;
+}
+#slider #next {
+  right: 10px;
+}
+
+/* 	-----------	image slider ----------- */
+
 
 .button{
 	background-color: #5E1B1B;
